# src/Endpoints/OrdersOrderFidEndpoint.php
@@ -154,4 +154,29 @@ class OrdersOrderFidEndpoint extends ApiEndpoint
     $request->setRequestDetail($detail);
     return $request;
   }
+
+  /**
+   * @summary Confirm an order, await payment
+   *
+   * @return OrderConfirmationRequest
+   */
+  public function confirmCoinbase()
+  {
+    $request = new OrderConfirmationRequest();
+    $request->setConnection($this->_getConnection());
+    $request->setEndpoint($this);
+
+    $detail = new ApiRequestDetail();
+    $detail->setRequireAuth(true);
+    $detail->setUrl($this->_buildUrl(
+      str_replace(
+        array_keys($this->_replacements),
+        array_values($this->_replacements),
+        'orders/{orderFid}/confirmCoinbase'
+      )
+    ));
+    $detail->setMethod('PUT');
+    $request->setRequestDetail($detail);
+    return $request;
+  }
 }
